force-app/main/default/objects/sugati__Continent__c/sugati__Continent__c.object-meta.xml
<CustomObject>
    <description>A list of the regions - continents?</description>
    <label>Continent</label>
    <nameField>
        <label>Continent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Continents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>