force-app/main/default/objects/sugati__Continent__c/fields/sugati__R_Client_Notes__c.field-meta.xml
<CustomField>
    <fullName>sugati__R_Client_Notes__c</fullName>
    <label>Client Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>