force-app/main/default/objects/sugati__Continent__c/fields/sugati__R_Our_Opinion__c.field-meta.xml
<CustomField>
    <fullName>sugati__R_Our_Opinion__c</fullName>
    <label>Our Opinion</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>