force-app/main/default/objects/sugati__Continent__c/fields/sugati__R_Quote__c.field-meta.xml
<CustomField>
    <fullName>sugati__R_Quote__c</fullName>
    <label>Quote</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>