force-app/main/default/objects/sugati__Continent__c/fields/sugati__R_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__R_Region_Code__c</fullName>
    <label>Region Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>