force-app/main/default/objects/sugati__Continent__c/fields/sugati__R_Sales_Tips__c.field-meta.xml
<CustomField>
    <fullName>sugati__R_Sales_Tips__c</fullName>
    <label>Sales Tips</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>